--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+asgiref==3.4.1
 Django==3.2.7
+django-crispy-forms==1.13.0
 mysqlclient==2.0.3
-dj-database-url==0.5.0
-gunicorn==20.0.4
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.3
+pytz==2021.1
+pywin32==303
+six==1.16.0
+sqlparse==0.4.2
+traitlets==5.1.1
 whitenoise==6.0.0
